Closed Bug 344215 Opened 19 years ago Closed 19 years ago

<xul:observes/> with no attributes triggers "ASSERTION: getElementById(""), fix caller?"

Categories

(Core :: XUL, defect)

PowerPC
macOS
defect
Not set
minor

Tracking

()

RESOLVED FIXED

People

(Reporter: jruderman, Assigned: MatsPalmgren_bugz)

References

Details

(Keywords: assertion, testcase)

Attachments

(2 files)

<xul:observes/> with no attributes triggers "ASSERTION: getElementById(""), fix caller?". Bug 296237 covers turning this assertion into some kind of warning, but I don't think the warning there would be appropriate for just having a <xul:observes/> with no attributes.
Attached file testcase
Blocks: 344486
Attached patch Patch rev. 1Splinter Review
Return NS_FINDBROADCASTER_NOT_FOUND when there is no/empty "element" attribute. (as we do in the "generic element" case when there is no "observes"/"command") http://bonsai.mozilla.org/cvsblame.cgi?file=/mozilla/content/xul/document/src/nsXULDocument.cpp&rev=1.723&root=/cvsroot&mark=3943,3954,3951,3956,3957,3967,3968,3982#3911
Assignee: nobody → mats.palmgren
Status: NEW → ASSIGNED
Attachment #229189 - Flags: superreview?(bugmail)
Attachment #229189 - Flags: review?(bugmail)
Attachment #229189 - Flags: superreview?(bugmail)
Attachment #229189 - Flags: superreview+
Attachment #229189 - Flags: review?(bugmail)
Attachment #229189 - Flags: review+
Checked in to trunk at 2006-07-20 01:11 PDT. -> FIXED
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Crashtest checked in.
Flags: in-testsuite+
Component: XP Toolkit/Widgets: XUL → XUL
QA Contact: xptoolkit.xul → xptoolkit.widgets
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: