<xul:observes/> with no attributes triggers assertion. b=344215 r+sr=sicking